bugfix, fonts not showing. Begin styling forms

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -2,9 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap');
+
+body {
+  font-family:
+    Quicksand,
+		system-ui,
+		-apple-system, /* Firefox supports this but not yet `system-ui` */
+		'Segoe UI',
+		Roboto,
+		Helvetica,
+		Arial,
+		sans-serif,
+		'Apple Color Emoji',
+		'Segoe UI Emoji';
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Cinzel', serif;
+}
+
 
 .mat {
   box-sizing: border-box;
@@ -13,8 +35,6 @@
   border: 8px solid #333;
   box-shadow: 0 0 0 10px rgba(125, 135, 18, 0.3) inset;
 }
-
-
 /* CSS */
 .button-71 {
   background-color: #6096B4;
